# password-cli-manager

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  bootstrap  configure.ac  flymake.mk  meson.build
.github/workflows/: github-actions.yml
lib/: Makefile.am  info.c  info.h  password.c  password.h  utility.c  utility.h
src/: Makefile.am  info.c  info.h  main.c  menu.c  menu_wrapper.c  parse_input.c  parse_wrapper.c  password.c  utility.h
src/exe/: meson.build  parse_input.c  parse_wrapper.c
src/include/: menu.h  menu_wrapper.h  parse_input.h  parse_wrapper.h
src/lib/: meson.build
src/tests/: all_password_test.c  delete_password_test.c  file_password_test.c  file_password_xfail_test.c  meson.build  new_password_test.c  remove_file_password_test.c  search_password_test.c  utility_test.h
tests/: Makefile.am  all_password_test.c  delete_password_test  delete_password_test.c  file_password_test.c  file_password_xfail_test.c  new_password_test.c  remove_file_password_test.c  search_password_test  search_password_test.c
tests/include/: utility_test.h
