file_password_test = executable(
  'filepasswordtest',
  'file_password_test.c',
  dependencies : passwordlib_dep
)
test('file_password_test', file_password_test)

file_password_xfail_test = executable(
  'filepassword_xfail_test',
  'file_password_xfail_test.c',
  dependencies : passwordlib_dep
)
test('file_password_xfail_test', file_password_xfail_test)

new_password_test = executable(
  'newpasswordtest',
  'new_password_test.c',
  dependencies : passwordlib_dep
)
test('new_password_test', new_password_test)

all_password_test = executable(
  'allpasswordtest',
  'all_password_test.c',
  dependencies : passwordlib_dep
)
test('all_password_test', all_password_test)

search_password_test = executable(
  'searchpasswordtest',
  'search_password_test.c',
  dependencies : passwordlib_dep
)
test('search_password_test', search_password_test)

delete_password_test = executable(
  'deletepasswordtest',
  'delete_password_test.c',
  dependencies : passwordlib_dep
)
test('delete_password_test', delete_password_test)

remove_file_password_test = executable(
  'removefilepasswordtest',
  'remove_file_password_test.c',
  dependencies : passwordlib_dep
)
test('remove_file_password_test', remove_file_password_test)

